# template-usb-description

./: .gitignore  CMakeLists.txt  constexpr_uac.hpp  constexpr_usb.hpp  hid.hpp  main.cpp  readme.md  uac2.hpp  usb.hpp
example/: ch32-hid.cpp  ch32-uac.cpp  comp.hpp  midiv1.cpp  usb_str.cpp
include/tpusb/: device.hpp  midiv1.hpp  midiv2.hpp  uac2.hpp  usb.hpp  usb_str.hpp
